# maths

./: .gitignore  CMakeLists.txt  README.md  emscripten_build.bat  emscripten_build.sh  main.cpp
include/: maths.h
include/maths/: Angle.h  Angle.inl  Interval.h  Interval.inl  Mat3.h  Mat3.inl  Transform.h  Transform.inl  Vec2.h  Vec2.inl  common.h  debug_draw.h  debug_draw.inl  glm_incl.h  maths_config.h  maths_funcs.h
include/maths/shapes/: ARect.h  ARect.inl  Circle.h  Circle.inl  ClipVertex.h  ContactManifold.h  GJK.h  GJK.inl  NoShape.h  OverlapHelper.h  OverlapHelper.inl  OverlapInfo.h  OverlapInfo.inl  OverlapTmp.h  Pgon.h  Pgon.inl  Ray.h  Ray.inl  Rect.h  Rect.inl  Shape.h  Shape.inl  ShapeTypes.h  Shape_internal.h  shapes_fw.h  shapes_h.h
src/: main.cpp  maths.h  test_gon.h  test_polygons.h  update_loop.cpp  update_loop.h
src/maths/: Angle.h  Angle.inl  Frame.h  Frame.inl  Mat3.h  Mat3.inl  Transform.h  Transform.inl  Vec2.h  Vec2.inl
src/maths/shapes/: ARect.h  ARect.inl  Circle.h  Circle.inl  OverlapInfo.h  OverlapInfo.inl  Ray.h  Ray.inl  Rect.h  Rect.inl  Shape.h  Shape.inl  ShapeTypes.h  Shape_internal.h
test/: main.cpp  test_overlaps.h  test_polygons.h
